--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <h1>Move the cursor over the squares or click</h1>
   <div class="container" id="board"></div>
   <script src="app.js"></script>
 </body>
